added some new features

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     		<br><br><br><br><br><br><br><br><br><br><br><br>
 
 
-    		<p><span><hr class="hr"></span><h1>Contact Us</h1></p>
+    		<p><hr class="hr"><h1> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Contact Us</h1></p>
     	</div>
     	<div class="contact-image">
     		<img src="imgs/telephone.jpg" />
@@ -83,7 +83,7 @@
 	    		
 	    		<h1 class="caption">Signup for comfort</h1>
 	    		<br><br>
-	    		<p class="caption">Everyone has the right to comfort. Book a room to enjoy comfort at its best from the <br> best provider of comfort</p>
+	    		<p class="caption" style="color: #666666;">Everyone has the right to comfort. Book a room to enjoy comfort at its best from the <br> best provider of comfort</p>
 	    		<br><br>
 	    		<button type="submit">Book Now</button>
 	    	</div>
@@ -95,8 +95,8 @@
       	<div class="logo-container">
 				<a href="index.html"> <img src="" alt="" height="30" width="150"> </a>
 			</div>
-          <div class="copyright"> 2020, All Rights Reserved  </div>
-          <div class="address-holder"> 34th Avenue, Ikeja, Lagos, Nigeria </div>
+          <div class="copyright" style="color: #333333;"> 2020, All Rights Reserved  </div>
+          <div class="address-holder" style="color: #333333;"> 34th Avenue, Ikeja, Lagos, Nigeria </div>
 
       </div>
 
