--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=devive-width initial-scale=1" />
+	<meta name="viewport" content="width=devive-width, initial-scale=1.0" />
 	<meta name="keywords" content="" />
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -23,7 +23,7 @@
 		<div class="page-header">
 			
 			<div class="logo-container">
-				<a href="index.html"> <img src="" alt="" height="50" width="200"> </a>
+				<a href="index.html"> <img src="" alt="Logo" height="50" width="200"> </a>
 			</div>
 
 			<div class="navbar">
